--- a/blog-list.html
+++ b/blog-list.html
@@ -87,7 +87,7 @@
 							<span class="candidate-name block mb-10 text-center">Abdulah Saghir Ahmad</span>
 							<ul class="social-icons  mb-30">
 								<li>
-									<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/">
+									<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/" target="_blank">
 										<i id="tt11" class="zmdi zmdi-facebook"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt11">
 											facebook
@@ -95,7 +95,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056">
+									<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056" target="_blank">
 										<i id="tt13" class="zmdi zmdi-linkedin"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt13">
 											linkedin
@@ -103,7 +103,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="instagram-link" href="https://instagram.com/the.final.shot/">
+									<a class="instagram-link" href="https://instagram.com/the.final.shot/" target="_blank">
 										<i id="tt15" class="zmdi zmdi-instagram"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt15">
 											instagram
@@ -111,7 +111,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="twitter-link" href="http://theoriginalabz.deviantart.com/">
+									<a class="twitter-link" href="http://theoriginalabz.deviantart.com/" target="_blank">
 										<i id="tt12" class="zmdi zmdi-brush"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt12">
 											deviantArt
@@ -119,7 +119,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/">
+									<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/" target="_blank">
 										<i id="tt14" class="zmdi zmdi-behance"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt14">
 											behance
@@ -198,11 +198,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank">
 												<h4 class="mt-15 mb-20">Diploma in Business Analysis with Specialization in Retail Management</h4>
 											</a>
 											<!-- <p>...</p> -->
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 												<i class="zmdi zmdi-assignment"></i>
 											</a>
 										</div>
@@ -212,11 +212,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsERGdxT0lzeUFHTFE" target="_blank">
 												<h4 class="mt-15 mb-20">Certificate in Sales and Marketing Management</h4>
 											</a>
 											<!-- <p>...</p> -->
-											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsERGdxT0lzeUFHTFE" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 												<i class="zmdi zmdi-assignment"></i>
 											</a>
 										</div>
@@ -226,11 +226,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQy1RVUNiUHRGVFk/">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQy1RVUNiUHRGVFk/" target="_blank">
 												<h4 class="mt-15 mb-20">Domain Leadership</h4>
 											</a>
 											<!-- <p>...</p> -->
-											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQy1RVUNiUHRGVFk" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQy1RVUNiUHRGVFk" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 												<i class="zmdi zmdi-assignment"></i>
 											</a>
 										</div>
@@ -245,11 +245,11 @@
 						<div class="mdl-card mdl-shadow--2dp pa-0">
 							<div class="mdl-card__supporting-text relative">
 								<span class="blog-cat">Tata Consultancy Services</span>
-								<a href="https://www.dropbox.com/s/5gf1gocs9ndh22x/Certificate%20in%20US%20Payroll%20System.pdf?dl=0">
+								<a href="https://www.dropbox.com/s/5gf1gocs9ndh22x/Certificate%20in%20US%20Payroll%20System.pdf?dl=0" target="_blank">
 									<h4 class="mt-15 mb-20">Certificate in US Payroll System</h4>
 								</a>
 								<!-- <p>...</p> -->
-								<a href="https://www.dropbox.com/s/5gf1gocs9ndh22x/Certificate%20in%20US%20Payroll%20System.pdf?dl=0" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+								<a href="https://www.dropbox.com/s/5gf1gocs9ndh22x/Certificate%20in%20US%20Payroll%20System.pdf?dl=0" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 									<i class="zmdi zmdi-assignment"></i>
 								</a>
 							</div>
@@ -259,11 +259,11 @@
 						<div class="mdl-card mdl-shadow--2dp pa-0">
 							<div class="mdl-card__supporting-text relative">
 								<span class="blog-cat">Tata Consultancy Services</span>
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEaEJ5U18tOHJ1QXM/view?usp=sharing">
+								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEaEJ5U18tOHJ1QXM/view?usp=sharing" target="_blank">
 									<h4 class="mt-15 mb-20">Certificate in CPG Industry</h4>
 								</a>
 								<!-- <p>...</p> -->
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEaEJ5U18tOHJ1QXM/view?usp=sharing" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEaEJ5U18tOHJ1QXM/view?usp=sharing" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 									<i class="zmdi zmdi-assignment"></i>
 								</a>
 							</div>
@@ -273,11 +273,11 @@
 						<div class="mdl-card mdl-shadow--2dp pa-0">
 							<div class="mdl-card__supporting-text relative">
 								<span class="blog-cat">Tata Consultancy Services</span>
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEcWZTT29FOS1OTGs/view?usp=sharing">
+								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEcWZTT29FOS1OTGs/view?usp=sharing" target="_blank">
 									<h4 class="mt-15 mb-20">Certificate in Advanced Retail Management and Store Operations</h4>
 								</a>
 								<!-- <p>...</p> -->
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEcWZTT29FOS1OTGs/view?usp=sharing" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEcWZTT29FOS1OTGs/view?usp=sharing" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 									<i class="zmdi zmdi-assignment"></i>
 								</a>
 							</div>
@@ -292,11 +292,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEQ0V5OWhNMGlPeWc/view?usp=sharing">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEQ0V5OWhNMGlPeWc/view?usp=sharing" target="_blank">
 												<h4 class="mt-15 mb-20">Certificate in Business Skills</h4>
 											</a>
 											<!-- <p>...</p> -->
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEQ0V5OWhNMGlPeWc/view?usp=sharing" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEQ0V5OWhNMGlPeWc/view?usp=sharing" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 												<i class="zmdi zmdi-assignment"></i>
 											</a>
 										</div>
@@ -306,11 +306,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEYWJsMFozRHhXS3M/view?usp=sharing">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEYWJsMFozRHhXS3M/view?usp=sharing" target="_blank">
 												<h4 class="mt-15 mb-20">Certificate in Retail Management</h4>
 											</a>
 											<!-- <p>...</p> -->
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEYWJsMFozRHhXS3M/view?usp=sharing" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEYWJsMFozRHhXS3M/view?usp=sharing" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 												<i class="zmdi zmdi-assignment"></i>
 											</a>
 										</div>
@@ -319,12 +319,12 @@
 								<div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">Lynda.com</span>
-											<a href="">
-												<h4 class="mt-15 mb-20">Become a Leader</h4>
+											<span class="blog-cat">Tata Consultancy Services</span>
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEZkdfM05CXzQzdVU" target="_blank">
+												<h4 class="mt-15 mb-20">Certificate in CRM</h4>
 											</a>
 											<!-- <p>...</p> -->
-											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEZkdfM05CXzQzdVU" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
 												<i class="zmdi zmdi-assignment"></i>
 											</a>
 										</div>
@@ -347,7 +347,7 @@
 							<!-- <p class="mt-10">Abdullah 2017. All rights reserved.</p> -->
 								<ul class="social-icons mt-10">
 									<li>
-										<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/">
+										<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/" target="_blank">
 											<i id="tt6" class="zmdi zmdi-facebook"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt6">
 												facebook
@@ -355,7 +355,7 @@
 										</a>
 									</li>
 									<li>
-										<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056/">
+										<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056/" target="_blank">
 											<i id="tt8" class="zmdi zmdi-linkedin"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt8">
 												linkedin
@@ -363,7 +363,7 @@
 										</a>
 									</li>
 									<li>
-										<a class="instagram-link" href="https://instagram.com/the.final.shot/">
+										<a class="instagram-link" href="https://instagram.com/the.final.shot/" target="_blank">
 											<i id="tt9" class="zmdi zmdi-instagram"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt9">
 												instagram
@@ -371,7 +371,7 @@
 										</a>
 									</li>
 									<li>
-										<a class="twitter-link" href="http://theoriginalabz.deviantart.com/">
+										<a class="twitter-link" href="http://theoriginalabz.deviantart.com/" target="_blank">
 											<i id="tt7" class="zmdi zmdi-brush"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt7">
 												deviantArt
@@ -379,7 +379,7 @@
 										</a>
 									</li>
 									<li>
-										<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/">
+										<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/" target="_blank">
 											<i id="tt10" class="zmdi zmdi-behance"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt10">
 												behance
