--- a/index.html
+++ b/index.html
@@ -679,11 +679,11 @@ Your browser does not support HTML5 video.
 			<div class="mdl-card mdl-shadow--2dp pa-0">
 				<div class="mdl-card__supporting-text relative">
 					<span class="blog-cat">Tata Consultancy Services</span>
-					<a href="">
+					<a href="https://drive.google.com/open?id=0ByFSl5W-SUsERGdxT0lzeUFHTFE" target="_blank">
 						<h4 class="mt-15 mb-20">Certificate in Sales and Marketing Management</h4>
 					</a>
 					<!-- <p>...</p> -->
-					<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp">
+					<a href="https://drive.google.com/open?id=0ByFSl5W-SUsERGdxT0lzeUFHTFE" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-orange mdl-shadow--8dp" target="_blank">
 						<i class="zmdi zmdi-assignment"></i>
 					</a>
 				</div>
