--- a/index.html
+++ b/index.html
@@ -841,7 +841,8 @@ Your browser does not support HTML5 video.
 						<h4 class="mt-15 mb-20">Photography</h4>
 					</a>
 					<p>Look at the world through my lens</p>
-					<a href="http://thefinalshot.getforge.io/" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-red mdl-shadow--8dp ">
+					<a href="https://www.instagram.com/the.final.shot/" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-red mdl-shadow--8dp ">
+						<!-- http://thefinalshot.getforge.io/ -->
 						<i class="zmdi zmdi-image-o"></i>
 						<div class="mdl-tooltip" data-mdl-for="tt100">
 							behance
